--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGOURL=mongodb+srv://reambiger17:<password>@cluster0.uywif59.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGOURL=mongodb+srv://reambiger17:ReamBigerWolta@cluster0.uywif59.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
