--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@react-google-maps/api": "^2.19.3",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.0.2",
     "cookie-parser": "^1.4.6",
