--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@paypal/paypal-js": "^8.0.2",
+    "@react-google-maps/api": "^2.19.3",
     "axios": "^1.6.7",
     "cloudinary": "^2.0.2",
     "fuse.js": "^7.0.0",
