--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,4 @@
 MONGOURL=mongodb+srv://reambiger17:ReamBigerWolta@cluster0.uywif59.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+CLOUDINARY_API_KEY=913492149969979
+CLOUDINARY_API_SECRET=DGaRrGR0KUyEJgjH1SncDXJbOOg
+CLOUDINARY_CLOUD_NAME=djujthdkr
