started creating jwt generator

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 MONGOURL=mongodb+srv://reambiger17:ReamBigerWolta@cluster0.uywif59.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=NLEi0DYT1tMZTTCIY6n6ArSbwPkOn6l6
+NODE_ENV=development
