--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^3.3.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "fuse.js": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.2.0",
