--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,10 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.12",
+    "@mui/styled-engine": "^5.15.11",
     "@paypal/paypal-js": "^8.0.2",
     "@react-google-maps/api": "^2.19.3",
     "animejs": "^3.2.2",
