--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "animejs": "^3.2.2",
     "axios": "^1.6.7",
     "cloudinary": "^2.0.2",
+    "date-fns": "^3.4.0",
     "dotenv": "^16.4.5",
     "fuse.js": "^7.0.0",
     "lottie-react": "^2.4.0",
