--- a/backend/package.json
+++ b/backend/package.json
@@ -21,13 +21,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "fuse.js": "^7.0.0",
-
     "geolib": "^3.3.4",
-
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.2.0",
     "pexels": "^1.4.0",
+    "socket.io": "^4.7.5",
     "twilio": "^4.23.0"
   }
 }
